# agentflow-pro

./: $null  .cursorrules  .dockerignore  .env.backup  .env.example  .env.local.mock  .env.local.nomock  .env.local.sqlite  .env.production  .env.production.generated  .eslintrc.json  .git-commit-faza15b.txt  .git-commit-msg.tmp  .git-commit-serija2.txt  .git-commit-top20-complete.txt  .gitignore  .mcp.json  .prettierrc  .vercelignore  ADDITIONAL-FEATURES-ANALYSIS.md  AGENTIC-WORKFLOW-PROGRESS.md  AGENTS.md  AI-AGENT-BEST-PRACTICES.md  AI-CONCIERGE-COMPLETE.md  AI-CONCIERGE-IMPLEMENTED.md  AI-CONCIERGE-IMPLEMENTIRANO.md  ALERT-THRESHOLDS-COMPLETE.md  ALL-FIXES.md  API-DOCS-README.md  API-INTERFACES-ANALYSIS.md  API-PARTNERSHIP-COMPLETE.md  API-REFACTORING-BULK-PLAN.md  API-ROUTE-REFACTORING-STATUS.md  ARCHITECTURE-ANALYSIS-2026.md  BASE-PLUS-MODULES.md  BETA-LAUNCH-COMPLETE.md  BOOKING-COM-UX-AUDIT.md  BOOKING-NAV-IMPLEMENTED.md  BUTTON-TEST-RESULTS.md  CHANGELOG.md  (+189 more)
.azure/: plan.md
.codex/: config.toml
.cursor/: MCP_REQUIRED.md  mcp.json
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
.snapshots/: CALENDAR-API-REFACTOR-COMPLETION.md  CALENDAR-API-REFACTOR-VISUAL-GUIDE.md  KONCNO-POROCILO.md  POVZETEK-REFACTORING.md  USE-CASE-FACTORY-PATTERN.md  VALIDACIJA-REFACTORINGA.md  sponsors-refactoring-plan.md
.storybook/: main.ts
.vercel/: project.json
benchmarks/: BENCHMARK_REPORT_TEMPLATE.md  pricing-benchmark.ts
docs/: ADMIN-GUIDE.md  ADMIN.md  AGENT-IMPLEMENTATION.md  AGENTFLOW-ECOSYSTEM-COMPARISON.md  AI-AGENT-READINESS-CHECKLIST.md  AUTO-FIX-ALL-ERRORS.md  AUTO-FIX-SESSION.md  AUTO-FIX-SUMMARY.md  AUTOMATED-GUEST-EMAILS-README.md  BETA-ONBOARDING.md  CELovita-ANALIZA-IN-PRIMERJAVA.md  CODE-REVIEW-README.md  COMMIT-REVIEW-AUDIT.md  COMPETITIVE-ANALYSIS-2026.md  COMPLETE-LOCAL-TEST-CHECKLIST.md  CONFLICT-RESOLVED.md  CONTRIBUTING.md  COST-OPTIMIZATION-IMPLEMENTATION-COMPLETE.md  CRITICAL-RUNTIME-FIXES.md  DEBUGGING.md  DEPLOY-VERIFY-NOW.md  DEPLOYMENT-FIX-SUMMARY.md  DEPLOYMENT-FIX.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DIREKTOR.md  DOCS-REVIEW-CHECKLIST.md  EXECUTIVE-SUMMARY-RAZISKAVA.md  EXECUTIVE-SUMMARY.md  FEATURE-MAP.md  FEATURES.md  FINAL-AUTO-FIX-REPORT.md  FINAL-IMPLEMENTATION-SUMMARY.md  FINAL-LAUNCH-CHECKLIST.md  FIXES-APPLIED-SUMMARY.md  FUNKCIJE-PO-LAYERJIH.md  GAP-ANALYSIS-WHAT-MISSING.md  GDPR-IMPLEMENTATION-STATUS.md  GET-GOOGLE-CREDENTIALS.md  GITHUB-VERCEL-ALIGNMENT-CHECK.md  (+131 more)
e2e/: booking-flow.spec.ts  login-test.spec.ts
load-tests/: faq-response.js  load.js  smoke.js
mobile/: app.json  package.json
playwright-report/: index.html
prisma/: MODULARIZATION.md  init.sql  schema-pgvector.prisma  schema.prisma  schema.prisma.postgres.backup  seed.js  seed.ts
public/: cebelarstvo-veselic.html  cleanup-sw.html  index.html  manifest.json  oauth-test.html  openapi.json  sw.js
rust/: Cargo.toml  NAPI-README.md  README.md  rust-toolchain.toml
rust/pricing-engine/: Cargo.toml  agentflow-pricing.win32-x64-msvc.node  index.d.ts  index.js  package.json
rust/pricing-engine/benches/: pricing_benchmark.rs
rust/pricing-engine/src/: lib.rs  main.rs  wrapper.ts
rust/workflow-executor/: Cargo.toml  index.d.ts  index.js  package.json
rust/workflow-executor/src/: lib.rs  main.rs  wrapper.ts
scripts/: VALIDATION-GUIDE.md  age-verification-system.ts  agent-resilience.ts  ai-agent-production-best-practices.ts  api-documentation-generator.ts  api-partnership-production-readiness.ts  audit-features.ts  automated-guest-emails.ts  backup.bat  beta-launch-production-readiness.ts  capture-page-screenshot.js  check-database.cjs  check-database.ts  check-db.sql  check-links.cjs  check-links.ts  check-postgres.js  check-sessions.ts  check-user.ts  cleanup-sw.js  code-review-assistant.ts  competitor-price-research.ts  consolidate-api.js  convert-schema-to-sqlite.ps1  convert-schema-to-sqlite.py  create-admin-user.ts  create-database.js  create-db-trust.js  db-push.cjs  (+101 more)
(+2003 files in other folders)
