[package]
name = "pricing-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "pricing-engine"
path = "src/main.rs"

[dependencies]
chrono = "0.4.44"
napi = "3.8.3"
napi-derive = "3.5.2"
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
napi-build = "2.3.1"

[build-dependencies]
napi-build = "2.3.1"
